Added toolbar in detail view and color codes as per the mockup
Showing data for header section is done

Showing data with dummy data is done

Showing list content items is done

Showing more option is done

Showing the all contents is done

Showing marker icon in map is done

Created A Demo App

Base Demo App to start new App is completed

Deleted unused class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Indihood</string>
+    <string name="app_name">DemoApp</string>
+    <string name="google_maps_key">AIzaSyCWSein0ZPPjXCiGpbCHO0yf343SYFMNn0</string>
 </resources>
