--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Embibe</string>
     <string name="bookmarked_title">Bookmarks</string>
+    <string name="bookmark">Bookmark</string>
+    <string name="movie_detail">Movie Details</string>
 </resources>
