--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">DemoApp</string>
     <string name="google_maps_key">AIzaSyCWSein0ZPPjXCiGpbCHO0yf343SYFMNn0</string>
+    <string name="username">User Name</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
 </resources>
