--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="username">User Name</string>
     <string name="password">Password</string>
     <string name="login">Login</string>
-    <string name="type_here">Type here</string>
+    <string name="type_here">Type a message</string>
     <string name="send">Send</string>
 </resources>
